--- a/index.html
+++ b/index.html
@@ -3,13 +3,12 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Kelvin Wamuyu | Portfolio</title>
+  <title>Kelvin| Portfolio</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-
   <header>
-    <h1>Kelvin Wamuyu</h1>
+    <h1>Kelvin</h1>
     <p>Aspiring Software Engineer | Creative Problem Solver</p>
     <nav>
       <a href="#about">About</a>
@@ -22,70 +21,62 @@
   </header>
 
   <main>
-
     <section id="about">
       <h2>About Me</h2>
-      <img src="assets/dev-image.png" alt="Web Development Image" width="200" />
       <p>Hello! I'm Kelvin, a passionate software engineering student currently enrolled at PLP Academy. I enjoy building clean, user-friendly websites and exploring the world of ethical hacking and cybersecurity.</p>
     </section>
 
-    <section id="education">
-      <h2>Educational Background</h2>
-      <p>Currently hustling as a Software Engineering Student at Power Learn Project Academy. The grind never stops.</p>
-      <p><a href="assets/kelvin-cv.pdf" download>Download My CV</a></p>
-    </section>
+<section id="education">
+  <h2>Educational Background</h2>
+  <p>Currently hustling as a Software Engineering Student at Power Learn Project Academy. The grind never stops.</p>
+  <a href="assets/kelvin-cv.pdf" download>Snag My CV</a>
+</section>
 
-    <section id="skills">
-      <h2>Programming Languages</h2>
-      <ul>
-        <li>HTML</li>
-        <li>CSS</li>
-        <li>JavaScript</li>
-        <li>Python</li>
-      </ul>
-    </section>
+<section id="skills">
+  <h2>Programming Languages</h2>
+  <ul>
+    <li>HTML (I could write this in my sleep... p(Making things look pretty since day one)</li>
+    <li>JavaScript (just getting my feet wet, but hrobably)</li>
+    <li>CSS (Making things look pretty since day one)</li>
+    <li>JavaScript (just getting my feet wet, but hey, we all start somewhere)</li>
+    <li>Python (basic stuff, but I’m leveling up fast)</li>
+  </ul>
+</section>
 
-    <section id="interests">
-      <h2>Interests</h2>
-      <ul>
-        <li>Web Development</li>
-        <li>Cybersecurity & Ethical Hacking</li>
-        <li>Linux Systems</li>
-        <li>Tech Innovations & Open Source</li>
-      </ul>
-    </section>
+<section id="interests">
+  <h2>Interests</h2>
+  <ul>
+    <li>Web Dev (surprise!)</li>
+    <li>Cybersecurity & Ethical Hacking (yes, I’m the “good hacker”)</li>
+    <li>Linux Systems (because Windows sometimes just isn’t it)</li>
+    <li>Tech Innovations & Open Source (love geeking out over new stuff)</li>
+  </ul>
+</section>
 
-    <section id="projects">
-      <h2>Projects</h2>
-      <ul>
-        <li><strong>Calculator App</strong> – Built a basic calculator. Not gonna lie, it does math better than me on a Monday morning. (HTML, CSS, JavaScript)</li>
-        <li><strong>Virtual Pet Game</strong> – Made a Python game to flex those OOP muscles. My virtual cat still ignores me, though.</li>
-      </ul>
-    </section>
+<section id="projects">
+  <h2>Projects</h2>
+  <ul>
+    <li><strong>Calculator App</strong> – Built a basic calculator. Not gonna lie, it does math better than me on a Monday morning. (HTML, CSS, JavaScript)</li>
+    <li><strong>Virtual Pet Game</strong> – Made a Python game to flex those OOP muscles. My virtual cat still ignores me, though.</li>
+  </ul>
+</section>
 
-    <section id="contact">
-      <h2>Contact Me</h2>
-      <form>
-        <label for="name">Name:</label><br />
-        <input type="text" id="name" name="name" required><br />
+<section id="contact">
+  <h2>Contact Me</h2>
+    <label for="name">Name:</label><br />
+    <input type="text" id="name" name="name" required><br />
 
-        <label for="email">Email:</label><br />
-        <input type="email" id="email" name="email" required><br />
+    <label for="email">Email:</label><br />
+    <input type="email" id="email" name="email" required><br />
 
-        <label for="message">Message:</label><br />
-        <textarea id="message" name="message" rows="5" required></textarea><br />
+    <label for="message">Message:</label><br />
+    <textarea id="message" name="message" rows="5" required></textarea><br />
 
-        <button type="submit">Send Message</button>
-      </form>
-    </section>
-
-  </main>
-
-  <footer>
-    <p>&copy; 2025 Kelvin Wamuyu | <a href="https://github.com/kevoh.eng" target="_blank">GitHub</a></p>
+    <button type="submit">Send Message</button>
+  </form>
+</section>
+<footer>
+    <p>&copy; 2025 Kelvin Jack | <a href="https://github.com/kevoh.eng">GitHub</a></p>
   </footer>
 </body>
 </html>
-          
-
-
