--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Kelvin| Portfolio</title>
+  <title>Kelvin Wamuyu| Portfolio</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
@@ -29,27 +29,27 @@
 <section id="education">
   <h2>Educational Background</h2>
   <p>Currently hustling as a Software Engineering Student at Power Learn Project Academy. The grind never stops.</p>
-  <a href="assets/kelvin-cv.pdf" download>Snag My CV</a>
+  <a href="assets/kelvin-cv.pdf" download></a>
 </section>
 
 <section id="skills">
   <h2>Programming Languages</h2>
   <ul>
-    <li>HTML (I could write this in my sleep... p(Making things look pretty since day one)</li>
-    <li>JavaScript (just getting my feet wet, but hrobably)</li>
-    <li>CSS (Making things look pretty since day one)</li>
-    <li>JavaScript (just getting my feet wet, but hey, we all start somewhere)</li>
-    <li>Python (basic stuff, but I’m leveling up fast)</li>
+    <li>HTML</li>
+    <li>JavaScript</li>
+    <li>CSS</li>
+    <li>JavaScript</li>
+    <li>Python</li>
   </ul>
 </section>
 
 <section id="interests">
   <h2>Interests</h2>
   <ul>
-    <li>Web Dev (surprise!)</li>
-    <li>Cybersecurity & Ethical Hacking (yes, I’m the “good hacker”)</li>
-    <li>Linux Systems (because Windows sometimes just isn’t it)</li>
-    <li>Tech Innovations & Open Source (love geeking out over new stuff)</li>
+    <li>Web Development</li>
+    <li>Cybersecurity & Ethical Hacking</li>
+    <li>Linux Systems</li>
+    <li>Tech Innovations & Open Source</li>
   </ul>
 </section>
 
@@ -76,7 +76,8 @@
   </form>
 </section>
 <footer>
-    <p>&copy; 2025 Kelvin Jack | <a href="https://github.com/kevoh.eng">GitHub</a></p>
+    <p>&copy; 2025 Kelvin Wamuyu| <a href="https://github.com/kevoh.eng">GitHub</a></p>
   </footer>
 </body>
 </html>
+
